--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,6 +21,20 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        
+    - name: Debugging Output
+      run: |
+        pwd
+        ls -la
+      
+    - name: Set Working Directory
+      run: cd /code/
+      
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+      
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
