--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -17,28 +16,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-        
+
     - name: Debugging Output
       run: |
         pwd
         ls -la
-      
+
     - name: Set Working Directory
-      run: cd /code/
-      
+      run: cd $GITHUB_WORKSPACE  # Use $GITHUB_WORKSPACE to refer to the root of the repository
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-      
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+
     - name: Run Tests
       run: |
         python manage.py test
