--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,30 +12,25 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v3
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-
+        
     - name: Debugging Output
       run: |
         pwd
         ls -la
-        find . -name 'requirements.txt'
-
-    - name: Set Working Directory
-      run: cd $GITHUB_WORKSPACE
-
+      
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r ./adt/requirements.txt
-
+      
     - name: Run Tests
       run: |
-        python manage.py test
+        python ./adt/manage.py test
