--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,6 +20,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Debugging Output
+      run: |
+        pwd
+        ls -la
+        find . -name 'manage.py'
         
     - name: Debugging Output
       run: |
