--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,6 +37,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r ./adt/requirements.txt
       
-    - name: Run Tests
-      run: |
-        python ./adt/manage.py test main
+    # - name: Run Tests
+    #   run: |
+    #     python ./adt/manage.py test main
