--- a/adt/docker-compose.yml
+++ b/adt/docker-compose.yml
@@ -1,16 +1,18 @@
 version: "3.9"
-   
+
 services:
   db:
     image: postgres
+    container_name: postgres
     ports:
       - "5432:5432"
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data  # Use a named volume for persistent data
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
   mongo:
     image: mongo
     container_name: mongo
@@ -28,6 +30,7 @@ services:
       - ${PWD}/docker/_mongo/scripts/init.sh:/docker-entrypoint-initdb.d/setup.sh
     ports:
       - 27017:27017
+
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
@@ -41,3 +44,7 @@ services:
       - POSTGRES_PASSWORD=postgres
     depends_on:
       - db
+
+volumes:
+  pg_data:
+  mongo_data:
