--- a/adt/.env
+++ b/adt/.env
@@ -1,7 +1,13 @@
 # Mongo DB
-MONGO_DB_HOST=mongo
-MONGO_DB_PORT=27017
-MONGO_DB_NAME=mongo_db
-MONGO_DB_USERNAME=root
-MONGO_DB_PASSWORD=root
-MONGO_DB_URI=mongodb://root:root@mongo:27017
+#MONGO_DB_HOST=mongo
+#MONGO_DB_PORT=27017
+#MONGO_DB_NAME=mongo_db
+#MONGO_DB_USERNAME=root
+#MONGO_DB_PASSWORD=root
+#MONGO_DB_URI=mongodb://root:root@mongo:27017
+
+POSTGRES_NAME=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
