Data files, updated notebook - added data files - fixed some bugs - updated notebook

--- a/adt/.gitignore
+++ b/adt/.gitignore
@@ -140,7 +140,7 @@ GitHub.sublime-settings
 
 # Ignore _data and data folders
 _data/
-data/
+# data/
 
 # ignore migtarions file
 **/migrations/*.py
